--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3"
